improve task list design (but it must be completely redesign :( )

--- a/back-sight/app/TODO.txt
+++ b/back-sight/app/TODO.txt
@@ -1,6 +1,6 @@
 
+ - expand task content (to see coments...)
  - renommer les tâche
- - chronométrer les tâches
  - tagger les tâches
  - commenter, annoter et mettre une description sur les tâches
  - pouvoir synchroniser les tâche sur un serveur externe
